ppx/tests/failing/7.ml
let _foo =
 fun [@reaml.component] () ->
  let _ =
   fun () ->
    (* let[@reaml] () = () in *)
    ()
  in
  ()
